cluster/apps/media/immich/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: media
  annotations:
    hajimari.io/icon: simple-icons:immich
    hajimari.io/enable: true
    hajimari.io/appName: "Immich"
    hajimari.io/group: "Media"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: "immich.${SECRET_LOCAL_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-server
            port:
              number: 3001
  tls:
  - hosts: 
    - immich.${SECRET_LOCAL_DOMAIN}
    secretName: wildcard-certs-media
